(library
 (name      test_pack)
 (modules   test_pack)
 (libraries irmin-test irmin-pack alcotest-lwt common))

(executable
 (name      test)
 (modules   test)
 (libraries digestif.ocaml test_pack))

(rule
 (alias    runtest)
 (package irmin-pack)
 (action  (run ./test.exe -q --color=always)))

(executable
 (name      bench)
 (modules   bench)
 (libraries irmin_pack irmin-test.bench))

(rule
 (alias   bench)
 (action (run ./bench.exe)))

(library
 (name      common)
 (modules   common)
 (libraries irmin-test irmin-pack))
